--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h1>Hello Mantas!</h1>
 <h1>Hello Isabelle</h1>
 <h1>hello Ada </h1>
+
+
+1. Associate with words, images etc.
+2. Repetition
+3. Writing it down
+4. Mind mapping
